NIFI-15341: Implementing post-migration External ControllerService resolution